fix: show score history on Profile and My Bookings from dashboard
Expose scoreHistory on GET /dashboard/home, relax badge rules for
terminal statuses, and reload profile history when score updates.

Co-authored-by: Cursor <cursoragent@cursor.com>